[package]
name = "axdriver_net"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>", "ChengXiang Qi <kuangjux@outlook.com>"]
description = "Common traits and types for network device (NIC) drivers"
documentation = "https://arceos-org.github.io/axdriver_crates/axdriver_net"
keywords = ["arceos", "driver", "nic"]
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[features]
default = []
ixgbe = ["dep:ixgbe-driver"]

[dependencies]
spin = "0.9"
log = "0.4"
axdriver_base = { workspace = true }
ixgbe-driver = { git = "https://github.com/ghostdragonzero/ixgbe_driver.git", rev="ef5fac9", optional = true}
